# Cafe-Bot

./: README.md  main.py  pyproject.toml  render.yaml  requirements.txt
src/: main.py  settings.py
src/agent/: agent.py
src/migrations/: create_tables.py
src/models/: schemas.py
src/repositories/: Database.py  repo.py
src/repositories/schema/: schema.py
src/routes/: chat_route.py
src/services/: chat_service.py
src/tools/: tools.py
src/utils/: api_response_dto.py  http_status.py
src/utils/exceptions/: custom_exceptions.py  error_codes.py
