[project]
name = "cafe-bot"
version = "0.1.0"
description = "Bean & Brew coffee shop chatbot API — Brew Buddy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "boto3>=1.35.0",
    "langchain-core>=0.3.0",
    "langchain-aws>=0.2.0",
    "langgraph>=0.2.0",
]
